--- a/app/src/main/res/layout/item_lawyer.xml
+++ b/app/src/main/res/layout/item_lawyer.xml
@@ -2,7 +2,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_margin="2dp"
     android:elevation="4dp"
     android:backgroundTint="#FFFFFF"
     android:transitionName="lawyer_card_transition"
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
-            app:tint="#6200EA" />
+            android:src="@drawable/profile1" />
 
         <!-- Lawyer Details -->
         <LinearLayout
